# orenji-cpp

./: .gitignore  CMakeLists.txt  Cahier des charges.txt  README.md  README_Cursor.md  README_TILED.md  SFML_FIXES.md  TODO.md  build-debug.bat  build.bat  build_cmake.bat  compile_commands.json  copy_dlls.bat  fix_json_include.bat  install_sfml.bat  language_errors.txt  main.cpp  standalone_menu_demo.cpp  update_compile_commands.bat
assets/maps/: 001-Grassland01.tsx  004-Mountain01.tsx  example.tmx  forest.tmx  orenji.tiled-session  test.tmx  test_map.json  tileset.png.dsc
data/: Actors.json  Classes.json  Enemies.json  Equipage.json  Items.json  Npc.json  Ships.json  Skills.json  System.json  TradeGoods.json  cities.json
data/equipment/: Armors.json  Weapons.json
data/items/: Documents.json  NavigationItems.json  ShipSupplies.json  TradeCategories.json  TradeGoods.json
data/lang/: en.json  fr.json
data/skills/: CommerceSkills.json  CraftingSkills.json  DiplomacySkills.json  DuelSkills.json  ExplorationSkills.json  LanguageSkills.json  NavalCombatSkills.json  NavigationSkills.json
data/world/: Cities.json  Discoveries.json  Kingdoms.json  Ports.json  Regions.json  world-map.json
docs/: Box2D_3_Changes.md  Migration.md  PARTICLE_SYSTEM.md  SFML_3_Changes.md
examples/: Box2DExample.cpp  CMakeLists.txt  CameraExample.cpp  GameMapExample.cpp  ParticleDemo.cpp  ParticleExample.cpp  Player.hpp  README.md  SimpleParticleDemo.cpp  TiledMapExample.cpp
examples/maps/: sample_map.json
include/: Config.hpp.in  Engine.hpp  Game.hpp
include/AI/: AISystem.hpp  BehaviorTree.hpp  Pathfinding.hpp
include/Animation/: AnimationManager.hpp
include/Core/: Camera.hpp  Component.hpp  Entity.hpp  EntityManager.hpp  RenderSystem.hpp  ResourceCache.hpp  Scene.hpp  System.hpp  SystemManager.hpp  TransformComponent.hpp
include/Gameplay/: Enemy.hpp  GameMap.hpp  Player.hpp
include/Graphics/: ParticleSystem.hpp  RenderSystem.hpp
include/Particles/: Particle.hpp  ParticleComponent.hpp  ParticleEmitter.hpp  ParticleSystem.hpp  ParticleTypes.hpp
include/Physics/: Box2DTypes.hpp  Box2DWrapper.hpp  PhysicsComponent.hpp  PhysicsSystem.hpp  PhysicsWorld.hpp  TiledMapCollider.hpp
include/Resources/: ResourceManager.hpp  TiledMapLoader.hpp
include/Scene/: Scene.hpp  SceneManager.hpp  SceneNode.hpp  SpriteNode.hpp  TextNode.hpp  TitleScene.hpp
include/Scenes/: GameScene.hpp  MainMenuScene.hpp
include/State/: GameState.hpp  MenuState.hpp  State.hpp  StateManager.hpp
include/States/: GameState.hpp  MainMenuState.hpp  State.hpp  StateMachine.hpp  TitleState.hpp
include/TiledMap/: TileMapLayer.hpp  TileMapRenderer.hpp  TileObject.hpp  TiledMap.hpp  TiledMapCollision.hpp  TiledMapFactory.hpp  TiledMapLoader.hpp  TiledMapModule.hpp  TiledMapRenderer.hpp  TiledMapScene.hpp
include/UI/: EditorForm.hpp  PauseMenu.hpp  UIManager.hpp
include/Utilities/: InputHandler.hpp  ResourceManager.hpp
include/Utils/: MathUtils.hpp
include/data/: DataManager.hpp  DataUtils.hpp
include/utils/: MathUtils.hpp
lib/behaviortree_cpp/: build.bat
lib/tgui/: CMakeLists.txt  changelog.md
resources/: config.json
resources/ai/: patrol_behavior.xml
resources/behaviors/: attack.xml  chase.xml  enemy_ai.xml  flee.xml  patrol.xml  simple.xml
resources/effects/: explosion.txt  fire.txt  smoke.txt
src/: Engine.cpp  Game.cpp  main.cpp  main_state_example.cpp  main_title_example.cpp  temp_main.cpp
src/AI/: AISystem.cpp  BehaviorTree.cpp  Pathfinding.cpp
src/Animation/: AnimationManager.cpp
src/Core/: Camera.cpp  Component.cpp  Entity.cpp  EntityManager.cpp  RenderSystem.cpp  ResourceCache.cpp  Scene.cpp  System.cpp  SystemManager.cpp  TransformComponent.cpp
src/Gameplay/: Enemy.cpp  GameMap.cpp  Player.cpp
src/Graphics/: ParticleSystem.cpp  RenderSystem.cpp
src/Particles/: Particle.cpp  ParticleComponent.cpp  ParticleComponent_update.cpp  ParticleEmitter.cpp  ParticleSystem.cpp
src/Physics/: Box2DWrapper.cpp  PhysicsComponent.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp  TiledMapCollider.cpp
src/Resources/: ResourceManager.cpp  TiledMapLoader.cpp
src/Scene/: Scene.cpp  SceneManager.cpp  SceneNode.cpp  SpriteNode.cpp  TextNode.cpp  TitleScene.cpp
src/Scenes/: GameScene.cpp  MainMenuScene.cpp
src/State/: GameState.cpp  MenuState.cpp  StateManager.cpp
src/States/: GameState.cpp  MainMenuState.cpp  State.cpp  StateMachine.cpp  TitleState.cpp
src/TiledMap/: TileMapLayer.cpp  TileMapRenderer.cpp  TileObject.cpp  TiledMap.cpp  TiledMapCollision.cpp  TiledMapFactory.cpp  TiledMapLoader.cpp  TiledMapModule.cpp  TiledMapRenderer.cpp  TiledMapScene.cpp
src/UI/: EditorForm.cpp  PauseMenu.cpp  UIManager.cpp
src/Utilities/: InputHandler.cpp  ResourceManager.cpp
src/Utils/: MathUtils.cpp
src/ai/: CityAI.cpp  CityAI.h  CityAI.hpp  DiplomaticAI.cpp  DiplomaticAI.h  DiplomaticAI.hpp  EventAI.cpp  EventAI.h  EventAI.hpp  FleetAI.cpp  FleetAI.h  FleetAI.hpp  MerchantAI.cpp  MerchantAI.h  MerchantAI.hpp  NPCAI.cpp  NPCAI.h  NPCAI.hpp
src/components/: PlayerComponent.cpp  PlayerComponent.h  PlayerComponent.hpp  SpriteComponent.cpp  SpriteComponent.h  SpriteComponent.hpp  TransformComponent.h  TransformComponent.hpp
src/core/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  State.cpp  State.h  StateManager.cpp  StateManager.h  TradingSystem.cpp  TradingSystem.h  World.cpp  World.h
src/data/: DataManager.cpp  DataUtils.cpp  GameData.cpp  GameData.hpp
src/examples/: DataManagerExample.cpp
src/game/: CharacterEditor.cpp  CharacterEditor.h  ConsoleUI.cpp  ConsoleUI.h  FleetManager.cpp  FleetManager.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameState.cpp  GameState.h  LanguageManager.cpp  LanguageManager.h  MainMenu.cpp  MainMenu.h  MapScene.cpp  MapScene.h  TiledMap.cpp  TiledMap.h  TradingSystem.cpp  TradingSystem.h  TradingSystem_impl.cpp  TradingUI.cpp  TradingUI.h  (+2 more)
tests/: GameplayEntitiesTest.cpp  README.md  ResourceManagerTest.cpp  SimplePhysicsTest.cpp  SimpleWindow.cpp  SimpleWindowWithBox.cpp  TGUITest.cpp
tools/: particle_generator.cpp
(+895 files in other folders)
